# Covenant

./: .gitignore  .replit  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  LICENSE  README.md  SUBMISSION.md  package.json  pnpm-lock.yaml  replit.md  tsconfig.json  vite.config.ts
artifacts/: .replay-store.json  README.md
artifacts/covenant/contracts/ultrahonk_verifier/: Cargo.toml
artifacts/covenant/contracts/ultrahonk_verifier/src/: lib.rs
attached_assets/: COVENANT_UI_REDESIGN_MASTER_SPEC_1782948558388.md  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-10-000-USD-EVENT-TIM_1782321103867.txt  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-10-000-USD-EVENT-TIM_1782325661811.txt  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-10-000-USD-EVENT-TIM_1782391186074.txt  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-10-000-USD-EVENT-TIM_1782399799094.txt  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-10-000-USD-EVENT-TIM_1782948067755.txt  (+3 more)
covenant/: Cargo.toml
covenant/circuits/compliance_credential/: Nargo.toml
covenant/circuits/compliance_credential/src/: main.nr
covenant/circuits/private_settlement/: Nargo.toml
covenant/circuits/private_settlement/src/: main.nr
covenant/contracts/covenant_compliance_bridge/: Cargo.toml
covenant/contracts/covenant_compliance_bridge/src/: lib.rs
covenant/contracts/covenant_registry/src/: lib.rs
covenant/contracts/covenant_settlement/: Cargo.toml
covenant/contracts/covenant_settlement/src/: lib.rs
covenant/contracts/ultrahonk_verifier/src/: lib.rs
covenant/frontend/: index.html  package.json  vite.config.ts
docs/: CIRCUITS.md
(+97 files in other folders)
